// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ruby_third_parties_segment datatype_as_user_id 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_segment",
      "title": "Sensitive data sent to Segment detected..",
      "description": "## Description\\nLeaking sensitive data to third-party analytics tools is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Segment.\\n\\n## Remediations\\n\\nWhen sending data to analytics libraries, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Segment docs](https://segment.com/docs/connections/sources/catalog/libraries/server/ruby/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_segment",
      "line_number": 2,
      "full_filename": "/tmp/bearer-scan/datatype_as_user_id.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 26,
          "end": 36
        }
      },
      "sink": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 1,
          "end": 61
        },
        "content": "analytics.alias(user_id: user.email, previous_id: \\"some id\\")"
      },
      "parent_line_number": 2,
      "snippet": "analytics.alias(user_id: user.email, previous_id: \\"some id\\")",
      "fingerprint": "1a443dec6ce049efa8df29bca4a1ec80_0",
      "old_fingerprint": "9896d90ab48b8f02860a62d387b67ad8_0",
      "code_extract": "analytics.alias(user_id: user.email, previous_id: \\"some id\\")"
    }
  ]
}"
`;

exports[`ruby_third_parties_segment datatype_in_nested_attribute 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_segment",
      "title": "Sensitive data sent to Segment detected..",
      "description": "## Description\\nLeaking sensitive data to third-party analytics tools is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Segment.\\n\\n## Remediations\\n\\nWhen sending data to analytics libraries, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Segment docs](https://segment.com/docs/connections/sources/catalog/libraries/server/ruby/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_segment",
      "line_number": 2,
      "full_filename": "/tmp/bearer-scan/datatype_in_nested_attribute.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "b5a3b0fd-dd5c-420d-91ce-dd2dddc8cc38",
        "name": "IP address"
      },
      "category_groups": [
        "Personal Data"
      ],
      "source": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 76,
          "end": 91
        }
      },
      "sink": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 1,
          "end": 94
        },
        "content": "analytics.track(user_id: user.id, event: \\"account sign in\\", context: { ip: user.ip_address })"
      },
      "parent_line_number": 2,
      "snippet": "analytics.track(user_id: user.id, event: \\"account sign in\\", context: { ip: user.ip_address })",
      "fingerprint": "1a443dec6ce049efa8df29bca4a1ec80_0",
      "old_fingerprint": "0e3e8727aa86c8cd267f639af524dc16_0",
      "code_extract": "analytics.track(user_id: user.id, event: \\"account sign in\\", context: { ip: user.ip_address })"
    }
  ]
}"
`;

exports[`ruby_third_parties_segment ok_no_datatypes 1`] = `"{}"`;

exports[`ruby_third_parties_segment ok_only_ignored_datatypes 1`] = `"{}"`;
